<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/home_icon"
        app:itemIconTint="@color/blue"
        app:itemTextColor="@color/blue"
        android:title="@string/home"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/batches_icon"
         app:itemIconTint="#2196F3"
        android:tooltipText="#2196F3"
        android:title="@string/Batches"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/chats_icon"
        app:itemIconTint="#2196F3"
        android:title="@string/Chats"/>


</menu>